src/api/dcps/gapi/include/gapi.h

typedef char                                    gapi_char;
typedef c_char      gapi_char;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef gapi_unsigned_long gapi_statusMask;
typedef gapi_object gapi_topic;
typedef gapi_object gapi_dataWriter;
typedef gapi_object gapi_publisher;
struct gapi_dataWriterListener {
    void *listener_data;
    gapi_listener_OfferedDeadlineMissedListener on_offered_deadline_missed;
    gapi_listener_OfferedIncompatibleQosListener on_offered_incompatible_qos;
    gapi_listener_LivelinessLostListener on_liveliness_lost;
    gapi_listener_PublicationMatchedListener on_publication_match;
};
/*
 * interface PublisherListener : DataWriterListener { };
 */
struct gapi_publisherListener {
    void *listener_data;
    gapi_listener_OfferedDeadlineMissedListener on_offered_deadline_missed;
    gapi_listener_OfferedIncompatibleQosListener on_offered_incompatible_qos;
    gapi_listener_LivelinessLostListener on_liveliness_lost;
    gapi_listener_PublicationMatchedListener on_publication_match;
};
/*
 * interface DomainParticipant : Entity {
 */
typedef gapi_object gapi_domainParticipant;
/*     DataWriter
 *     create_datawriter(
 *         in Topic a_topic,
 *         in DataWriterQos qos,
 *         in DataWriterListener a_listener);
 */
OS_API gapi_dataWriter
gapi_publisher_create_datawriter (
    gapi_publisher _this,
    const gapi_topic a_topic,
    const gapi_dataWriterQos *qos,
    const struct gapi_dataWriterListener *a_listener,
    const gapi_statusMask mask);
/*     ReturnCode_t
 *     delete_datawriter(
 *         in DataWriter a_datawriter);
 */
OS_API gapi_returnCode_t
gapi_publisher_delete_datawriter (
    gapi_publisher _this,
    const gapi_dataWriter a_datawriter);
/*     DataWriter
 *     lookup_datawriter(
 *         in string topic_name);
 */
OS_API gapi_dataWriter
gapi_publisher_lookup_datawriter (
    gapi_publisher _this,
    const gapi_char *topic_name);
/*     ReturnCode_t
 *     delete_contained_entities();
 */
OS_API gapi_returnCode_t
gapi_publisher_delete_contained_entities (
    gapi_publisher _this);
/*     ReturnCode_t
 *     set_qos(
 *         in PublisherQos qos);
 */
OS_API gapi_returnCode_t
gapi_publisher_set_qos (
    gapi_publisher _this,
    const gapi_publisherQos *qos);
/*     ReturnCode_t
 *     get_qos(
 *         inout PublisherQos qos);
 */
OS_API gapi_returnCode_t
gapi_publisher_get_qos (
    gapi_publisher _this,
    gapi_publisherQos *qos);
/*     ReturnCode_t
 *     set_listener(
 *         in PublisherListener a_listener,
 *         in StatusKindMask mask);
 */
OS_API gapi_returnCode_t
gapi_publisher_set_listener (
    gapi_publisher _this,
    const struct gapi_publisherListener *a_listener,
    const gapi_statusMask mask);
/*     PublisherListener
 *     get_listener();
 */
OS_API struct gapi_publisherListener
gapi_publisher_get_listener (
    gapi_publisher _this);
/*     ReturnCode_t
 *     suspend_publications();
 */
OS_API gapi_returnCode_t
gapi_publisher_suspend_publications (
    gapi_publisher _this);
/*     ReturnCode_t
 *     resume_publications();
 */
OS_API gapi_returnCode_t
gapi_publisher_resume_publications (
    gapi_publisher _this);
/*     ReturnCode_t
 *     begin_coherent_changes();
 */
OS_API gapi_returnCode_t
gapi_publisher_begin_coherent_changes (
    gapi_publisher _this);
/*     ReturnCode_t
 *     end_coherent_changes();
 */
OS_API gapi_returnCode_t
gapi_publisher_end_coherent_changes (
    gapi_publisher _this);
/* ReturnCode_t
 *   wait_for_acknowledgments(
 *      in Duration_t max_wait);
 */
OS_API gapi_returnCode_t
gapi_publisher_wait_for_acknowledgments (
    gapi_publisher _this,
    const gapi_duration_t *max_wait);
/*     DomainParticipant
 *     get_participant();
 */
OS_API gapi_domainParticipant
gapi_publisher_get_participant (
    gapi_publisher _this);
/*     ReturnCode_t
 *     set_default_datawriter_qos(
 *         in DataWriterQos qos);
 */
OS_API gapi_returnCode_t
gapi_publisher_set_default_datawriter_qos (
    gapi_publisher _this,
    const gapi_dataWriterQos *qos);
/*     ReturnCode_t
 *     get_default_datawriter_qos(
 *         inout DataWriterQos qos);
 */
OS_API gapi_returnCode_t
gapi_publisher_get_default_datawriter_qos (
    gapi_publisher _this,
    gapi_dataWriterQos *qos);
/*     ReturnCode_t
 *     copy_from_topic_qos(
 *         inout DataWriterQos a_datawriter_qos,
 *         in TopicQos a_topic_qos);
 */
OS_API gapi_returnCode_t
gapi_publisher_copy_from_topic_qos (
    gapi_publisher _this,
    gapi_dataWriterQos *a_datawriter_qos,
    const gapi_topicQos *a_topic_qos);